--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "repository": "https://github.com/buffgame/buff-client-electron.git",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^7.1.4",
     "babel-runtime": "^6.22.0",
     "history": "^4.6.3",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^1.0.0-beta.47",
-    "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.8.3",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
