--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buff-client",
   "version": "0.0.0",
   "description": "buff client for desktop",
-  "main": "main.js",
+  "main": "compiled/bundle.js",
   "author": [
     {
       "name": "ilya shusterman",
@@ -16,6 +16,7 @@
   "repository": "https://github.com/buffgame/buff-client-electron.git",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.1.0",
     "axios": "^0.18.0",
     "babel-loader": "^7.1.4",
     "babel-runtime": "^6.22.0",
@@ -76,6 +77,7 @@
     "prod": "webpack --config webpack.build.config.js && electron --noDevServer .",
     "develop": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.config.js",
     "build": "webpack --config webpack.config.js",
+    "release": "webpack --config webpack.config.js && electron-builder",
     "lint": "eslint --no-ignore scripts app test *.js",
     "pack": "run-s private:clean private:compile private:build:all",
     "pack:mac": "run-s private:clean private:compile private:build:mac",
@@ -89,5 +91,17 @@
     "private:serve": "babel-node scripts/serve.js",
     "private:compile": "babel app/ --copy-files --out-dir build",
     "private:clean": "rimraf build"
+  },
+  "build": {
+    "appId": "game.buff",
+    "files": [
+      "compiled/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "publish": null
   }
 }
