--- a/package.json
+++ b/package.json
@@ -1,25 +1,67 @@
 {
-  "name": "buff",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "buff",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^3.6.0",
+        "@material-ui/icons": "^3.0.1",
+        "axios": "^0.18.0",
+        "babel-loader": "^8.0.4",
+        "history": "^4.7.2",
+        "material-ui": "^1.0.0-beta.47",
+        "material-ui-icons": "^1.0.0-beta.36",
+        "node-sass": "^4.10.0",
+        "prop-types": "^15.5.10",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-material-ui-form-validator": "^2.0.0-beta.10",
+        "react-redux": "^5.0.2",
+        "react-router": "^4.1.2",
+        "react-router-dom": "^4.2.2",
+        "react-router-redux": "^5.0.0-alpha.9",
+        "react-scripts": "^2.1.1",
+        "react-swipeable-views": "^0.12.13",
+        "react-tooltip": "^3.6.0",
+        "redux": "^3.0.0",
+        "redux-devtools-extension": "^2.13.2",
+        "redux-localstorage": "^0.4.1",
+        "redux-thunk": "^2.2.0",
+        "routes": "^2.1.0"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.22.2",
+        "babel-core": "^6.2.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-preset-es2015": "^6.1.18",
+        "babel-preset-react": "^6.22.0",
+        "babel-preset-stage-0": "^6.1.18",
+        "browser-sync": "^2.23.6",
+        "chai": "^4.1.0",
+        "css-loader": "^0.28.1",
+        "eslint-plugin-react": "^7.1.0",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.1.0",
+        "npm-run-all": "^4.0.1",
+        "redux-mock-store": "^1.2.2",
+        "rimraf": "^2.5.4",
+        "sass-loader": "^6.0.7",
+        "style-loader": "^0.19.0",
+        "url-loader": "^1.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
