--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@material-ui/icons": "^3.0.1",
         "axios": "^0.18.0",
         "babel-loader": "^8.0.4",
+        "gsap": "^2.0.2",
         "history": "^4.7.2",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
@@ -22,6 +23,7 @@
         "react-scripts": "^2.1.1",
         "react-swipeable-views": "^0.12.13",
         "react-tooltip": "^3.6.0",
+        "react-transition-group": "^2.5.0",
         "redux": "^3.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-localstorage": "^0.4.1",
