--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "prop-types": "^15.5.10",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-ga": "^2.5.6",
         "react-material-ui-form-validator": "^2.0.0-beta.10",
         "react-redux": "^5.0.2",
         "react-router": "^4.1.2",
