--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "redux-devtools-extension": "^2.13.2",
         "redux-localstorage": "^0.4.1",
         "redux-thunk": "^2.2.0",
-        "routes": "^2.1.0"
+        "routes": "^2.1.0",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "babel-cli": "^6.22.2",
