--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "babel-loader": "^8.0.4",
         "gsap": "^2.0.2",
         "history": "^4.7.2",
+        "immutable": "^4.0.0-rc.12",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
         "node-sass": "^4.10.0",
