--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@material-ui/icons": "^3.0.1",
         "axios": "^0.18.0",
         "babel-loader": "^8.0.4",
+        "classnames": "^2.2.6",
         "gsap": "^2.0.2",
         "history": "^4.7.2",
         "immutable": "^4.0.0-rc.12",
