--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "gsap": "^2.0.2",
         "history": "^4.7.2",
         "immutable": "^4.0.0-rc.12",
+        "jest": "23.6.0",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
         "node-sass": "^4.10.0",
         "prop-types": "^15.6.2",
+        "query-string": "5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-ga": "^2.5.6",
