--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "buff",
+    "name": "buff-app",
     "version": "0.1.0",
+    "author": "Oleksa Stryzhak <roquefore@fulcrum.rocks>",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^3.6.0",
@@ -21,6 +22,7 @@
         "react-dom": "^16.2.0",
         "react-ga": "^2.5.6",
         "react-hot-loader": "^4.6.3",
+        "react-input-range": "^1.3.0",
         "react-material-ui-form-validator": "^2.0.0-beta.10",
         "react-redux": "^5.0.2",
         "react-router": "^4.1.2",
@@ -74,7 +76,9 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --config=\"./jest/jest.test.config.json\"",
+        "test:watch": "react-scripts test --watch",
+        "test:coverage": "react-scripts test --coverage",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
