--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --config=\"./jest/jest.test.config.json\"",
+        "test": "react-scripts test",
         "test:watch": "react-scripts test --watch",
         "test:coverage": "react-scripts test --coverage",
         "eject": "react-scripts eject"
