--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "eslint-plugin-react": "^7.1.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.1.0",
-        "npm-run-all": "^4.0.1",
+        "npm-run-all": "^4.1.5",
         "redux-mock-store": "^1.2.2",
         "rimraf": "^2.5.4",
         "sass-loader": "^6.0.7",
@@ -75,8 +75,9 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "build:dev": "react-scripts build",
+        "build:prod": "npm-run-all --serial test build:dev",
+        "test": "react-scripts test -watchAll",
         "test:watch": "react-scripts test --watch",
         "test:coverage": "react-scripts test --coverage",
         "eject": "react-scripts eject"
