catching on setOverwolfListeners

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "axios": "^0.18.0",
         "babel-loader": "^8.0.4",
         "classnames": "^2.2.6",
+        "enzyme": "^3.8.0",
+        "enzyme-adapter-react-16": "^1.8.0",
         "gsap": "^2.0.2",
         "history": "^4.7.2",
         "immutable": "^4.0.0-rc.12",
@@ -30,6 +32,7 @@
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "^2.1.1",
         "react-swipeable-views": "^0.12.13",
+        "react-test-renderer": "^16.7.0",
         "react-tooltip": "^3.6.0",
         "react-transition-group": "^2.5.2",
         "redux": "^3.0.0",
@@ -77,7 +80,7 @@
         "start": "react-scripts start",
         "build:dev": "react-scripts build",
         "build:prod": "npm-run-all --serial test build:dev",
-        "test": "react-scripts test -watchAll",
+        "test": "react-scripts test --watchAll",
         "test:watch": "react-scripts test --watch",
         "test:coverage": "react-scripts test --coverage",
         "eject": "react-scripts eject"
