--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jest": "23.6.0",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
+        "mixpanel-browser": "^2.26.0",
         "node-sass": "^4.10.0",
         "prop-types": "^15.6.2",
         "query-string": "5",
