--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "redux-saga": "^0.16.2",
         "redux-thunk": "^2.2.0",
         "routes": "^2.1.0",
+        "socket-io": "^1.0.0",
+        "socket.io-client": "^2.2.0",
         "uuid": "^3.3.2",
         "victory": "^31.2.0"
     },
