--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-router-dom": "^4.2.2",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "^2.1.1",
+        "react-social-login": "^3.4.4",
         "react-swipeable-views": "^0.12.13",
         "react-test-renderer": "^16.7.0",
         "react-tooltip": "^3.6.0",
