--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
         "react-swipeable-views": "^0.12.13",
         "react-switch": "^4.1.0",
         "react-test-renderer": "^16.7.0",
+        "react-toastify": "^4.5.2",
         "react-tooltip": "^3.6.0",
-        "react-transition-group": "^2.5.2",
+        "react-transition-group": "^2.6.1",
         "redux": "^3.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-localstorage": "^0.4.1",
