--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "history": "^4.7.2",
         "immutable": "^4.0.0-rc.12",
         "jest": "23.6.0",
+        "joi": "^14.3.1",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
         "mixpanel-browser": "^2.26.0",
