--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "query-string": "5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-flip-move": "^3.0.3",
         "react-ga": "^2.5.6",
         "react-hot-loader": "^4.6.3",
         "react-input-range": "^1.3.0",
