--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-toastify": "^4.5.2",
         "react-tooltip": "^3.6.0",
         "react-transition-group": "^2.6.1",
+        "recharts": "^1.5.0",
         "redux": "^3.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-localstorage": "^0.4.1",
