--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "immutable": "^4.0.0-rc.12",
         "jest": "23.6.0",
         "joi": "^14.3.1",
+        "lodash": "^4.17.11",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-icons": "^1.0.0-beta.36",
         "mixpanel-browser": "^2.26.0",
