--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "prop-types": "^15.7.2",
         "query-string": "5",
         "react": "^16.2.0",
+        "react-detect-offline": "^2.3.0",
         "react-dom": "^16.2.0",
         "react-flip-move": "^3.0.3",
         "react-ga": "^2.5.6",
