--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,16 @@
 {
-    "manifest_version": "1",
+    "manifest_version": 1,
     "type": "WebApp",
     "meta": {
-        "name": "Buff Achievement Tracker",
+        "name": "BUFF",
         "version": "0.3.3",
-        "minimum-overwolf-version": "0.92.300.0",
+        "minimum-overwolf-version": "0.119.1",
         "author": "buff.game",
         "icon": "IconMouseOver.png",
         "icon_gray": "IconMouseNormal.png",
         "launcher_icon": "launcher_icon.ico",
         "description": "Track your achievements, earn BUFF coins, buy stuff",
-        "dock_button_tile": "BUFF"
+        "dock_button_title": "BUFF"
     },
     "permissions": ["Extensions", "Streaming", "Profile", "GameInfo"],
     "data": {
@@ -33,10 +33,6 @@
         },
         "windows": {
             "index": {
-                "file": "controller.html",
-                "is_background_page": true
-            },
-            "main": {
                 "file": "index.html",
                 "transparent": true,
                 "disable_rightclick": true,
