--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
     "manifest_version": 1,
     "type": "WebApp",
     "meta": {
-        "name": "BUFF",
-        "version": "0.3.3",
+        "name": "Buff Achievement Tracker",
+        "version": "0.3.4",
         "minimum-overwolf-version": "0.119.1",
         "author": "buff.game",
         "icon": "IconMouseOver.png",
@@ -33,6 +33,10 @@
         },
         "windows": {
             "index": {
+                "file": "controller.html",
+                "is_background_page": true
+            },
+            "main": {
                 "file": "index.html",
                 "transparent": true,
                 "disable_rightclick": true,
